--- a/POIProxy/Views/test.htm
+++ b/POIProxy/Views/test.htm
@@ -6,28 +6,31 @@
     </head>
     <body style="height: 100%; width: 100%">
         
-        <div id="whiteBoard" 
-            style="margin: auto; position: absolute; width: 500px; height: 400px;">
-            <div id = "canvasStack" style="position: absolute; width: 500px; height: 400px">
-                <canvas id = "imageLayer" width=500 height=400></canvas>
-            </div>
-        </div>
+        
         
         
         
         @RenderBody()
-        <div id = "PresBoard" style="height: 479px; width: 671px; position: relative; top: 10%" align="center">
-            <div id = "PresBoardSideBarContainer" style="position: absolute; top: 15%; left: 1%; height: 80%; width: 15%;">
-                <div id = "PresBoardSideBar" style="position: absolute; height: 18%; width: 100%; left: 0%; top: 0%;">
-                </div>
-                
-            </div>
+        <div id = "PresBoard" style="height: 479px; width: 60%; position: relative; left:20%; top: 10%" align="center">
+            
             <div id = "PresBoardSideBarSlideRegion" style="position: absolute; top: 10%; left: -4%; height: 90%; width: 25%;">
+                <div id = "PresBoardSideBarContainer" style="position: absolute; top: 5%; left: 20%; height: 90%; width: 60%;">
+                    <div id = "PresBoardSideBar" style="position: absolute; height: 17%; width: 100%; left: 0%; top: 0%;">
+                    </div>
+                </div>
             </div>
-            <div id = "PresBoardMainDisplay" style="position: absolute; top: 15%; left: 17%; height: 80%; width: 82%;">
+            <div id = "PresBoardMainDisplay" style="position: absolute; top: 15%; left: 18%; height: 80%; width: 80%;">
                 <img class = "MainSlideView" alt="" src="" style="position: absolute; top: 1%; left: 1%; height: 98%; width: 98%; background-image: none;" />
             </div>
+
+            <div id="whiteBoard" style="position: absolute; top: -82%; left: 18%; height: 80%; width: 80%;">
+                <div id = "canvasStack" style="position: absolute; width: 100%; height: 100%">
+                    <canvas id = "imageLayer" style="position: absolute; width: 100%; height: 100%"></canvas>
+                </div>
+            </div>
         </div>
+
+        
 
         </body>
 </html>
