--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -4,12 +4,15 @@
 }
 
 <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/ui-lightness/jquery-ui.css" rel="Stylesheet" />
+<link type="text/css" href="@(Model.CSSUrl)jMenu.jquery.css" rel="Stylesheet" />
+
 <script src = "@(Model.ScriptUrl)jquery-1.6.4.js" type = "text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.signalR-0.5.2.min.js" type ="text/javascript"></script>
 <script src = "@(Model.SignalrUrl)hubs" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery-ui-1.8.22.custom.min.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.corner.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.ui.touch-punch.min.js" type="text/javascript"></script>
+<script src = "@(Model.ScriptUrl)jMenu.jquery.min.js" type="text/javascript"></script>
 
 <style type="text/css"><!--
     body
@@ -83,6 +86,61 @@
         height: 100%; 
         width: 90%;
     }
+    
+    #MenuBar
+    {
+        position: absolute; 
+        width: 30%; 
+        left: 25%; 
+        top: 5%; 
+        height: 7%;
+        background-color: #333;
+        border-radius: 5px;
+    }
+    
+    #MenuBar > div
+    {
+        width: 25%;
+        height: 100%;
+        
+        position: absolute;
+        border-left: 1px solid #c0c0c0;
+        
+    }
+    
+    #MenuBar > div > img
+    {
+        height: 70%;
+       
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+    }
+    
+    #MenuBar > div:first-child
+    {
+        border-left: none;
+    }
+    
+    #DrawingItem
+    {
+        left: 0%;
+    }
+    
+    #ColorItem
+    {
+        left: 25%;
+    }
+    
+    #CommentItem
+    {
+        left: 50%;
+    }
+    
+    #ControlItem
+    {
+        left: 75%;
+    }
             
 --></style>
 
@@ -132,7 +190,14 @@
             hideWhiteboard();
         });
 
+        // simple jMenu plugin called
+        $("#jMenu").jMenu();
+
+        
+
         updateUI();
+        initMenuBar();
+        initDrawing();
     });
 
     function updateUI() {
@@ -181,6 +246,13 @@
         board.css({
             height: myHeight
         });
+    }
+
+    function initMenuBar() {
+        $("#DrawingItem > img").attr("src", "@(Model.ImageUrl)pencil.png");
+        $("#ColorItem > img").attr("src", "@(Model.ImageUrl)graph_bar.png");
+        $("#CommentItem > img").attr("src", "@(Model.ImageUrl)speech_bubble.png");
+        $("#ControlItem > img").attr("src", "@(Model.ImageUrl)Control_icon.png");
     }
 
     function duringSlideOnSideBar(event, ui) {
@@ -602,8 +674,6 @@
     }
 </script>
 
-
-
 <script type="text/javascript">
     
     // The pencil tool instance.
@@ -616,7 +686,5 @@
 
     //For showing presentation
     var curSlideIndex = 0;
-
-    initDrawing();
 
 </script>
