--- a/POIProxy/Views/test.htm
+++ b/POIProxy/Views/test.htm
@@ -6,13 +6,24 @@
     </head>
     <body style="height: 100%; width: 100%">
         
-        
-        
-        
-        
         @RenderBody()
         <div id = "PresBoard" style="height: 479px; width: 60%; position: relative; left:20%; top: 10%" align="center">
             
+            <div id = "MenuBar" >
+                <div id = "DrawingItem">
+                    <img />
+                </div>
+                <div id = "ColorItem">
+                    <img />
+                </div>
+                <div id = "CommentItem">
+                    <img />
+                </div>
+                <div id = "ControlItem">
+                    <img />
+                </div>
+            </div>
+
             <div id = "PresBoardSideBarSlideRegion" style="position: absolute; top: 10%; left: -4%; height: 90%; width: 25%;">
                 <div id = "PresBoardSideBarContainer" style="position: absolute; top: 5%; left: 20%; height: 90%; width: 60%;">
                     <div id = "PresBoardSideBar" style="position: absolute; height: 17%; width: 100%; left: 0%; top: 0%;">
@@ -29,8 +40,6 @@
                 </div>
             </div>
         </div>
-
-        
 
         </body>
 </html>
