--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -96,6 +96,10 @@
         height: 7%;
         background-color: #222;
         border-radius: 5px;
+        
+        -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;
     }
     
     #MenuBar > div
