--- a/POIProxy/Views/test.htm
+++ b/POIProxy/Views/test.htm
@@ -10,18 +10,10 @@
         <div id = "PresBoard" style="height: 479px; width: 60%; position: relative; left:20%; top: 10%" align="center">
             
             <div id = "MenuBar" >
-                <div id = "DrawingItem">
-                    <img />
-                </div>
-                <div id = "ColorItem">
-                    <img />
-                </div>
-                <div id = "CommentItem">
-                    <img />
-                </div>
-                <div id = "ControlItem">
-                    <img />
-                </div>
+                <div id = "DrawingItem"><img /></div>
+                <div id = "ColorItem"><img /></div>
+                <div id = "CommentItem"><img /></div>
+                <div id = "ControlItem"><img /></div>
             </div>
 
             <div id = "PresBoardSideBarSlideRegion" style="position: absolute; top: 10%; left: -4%; height: 90%; width: 25%;">
@@ -36,7 +28,7 @@
 
             <div id="whiteBoard" style="position: absolute; top: -82%; left: 18%; height: 80%; width: 80%;">
                 <div id = "canvasStack" style="position: absolute; width: 100%; height: 100%">
-                    <canvas id = "imageLayer" style="position: absolute; width: 100%; height: 100%"></canvas>
+                    <img id = "imageLayer" style="position: absolute; width: 100%; height: 100%"/>
                 </div>
             </div>
         </div>
