--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    _Layout = "test.htm";
+    _Layout = "Layout.htm";
     ViewBag.Title = @Model.Name;
 }
 
 <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/ui-lightness/jquery-ui.css" rel="Stylesheet" />
-<link type="text/css" href="@(Model.CSSUrl)jMenu.jquery.css" rel="Stylesheet" />
+<link type="text/css" href="@(Model.CSSUrl)poi.css" rel="Stylesheet" />
 
 <script src = "@(Model.ScriptUrl)jquery-1.6.4.js" type = "text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.signalR-0.5.2.min.js" type ="text/javascript"></script>
@@ -12,133 +12,7 @@
 <script src = "@(Model.ScriptUrl)jquery-ui-1.8.22.custom.min.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.corner.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.ui.touch-punch.min.js" type="text/javascript"></script>
-<script src = "@(Model.ScriptUrl)jMenu.jquery.min.js" type="text/javascript"></script>
 
-<style type="text/css"><!--
-    body
-    {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;  
-    }
-            
-    #PresBoard
-    {
-        border-radius: 10px ;
-    }
-            
-    #PresBoardSideBarContainer
-    {
-        overflow: hidden; 
-        background: transparent;  
-    }
-    
-    #PresBoardSideBarSlideRegion
-    {
-        background: transparent;
-    }
-            
-    #PresBoardSideBar
-    {
-        border-radius: 2% ;
-    }
-            
-    .SlideAbstractView
-    {
-        border-radius: 5px ;
-    }
-            
-    .MainSlideView
-    {
-        border-radius: 8px ;
-    }
-            
-    .ui-slider .ui-slider-handle 
-    { 
-        width: 10px; 
-    }
-            
-    .ui-slider 
-    {
-        background-image: none;
-        background: transparent;
-        border: 0px;
-    }
-    
-    #canvasStack > img
-    {
-        background-color: Silver;
-    }
-    
-    .SlideAbstractView
-    {
-        position: absolute; 
-        left: 5%; 
-        height: 100%; 
-        width: 90%;
-    }
-    
-    #MenuBar
-    {
-        position: absolute; 
-        width: 30%; 
-        left: 25%; 
-        top: 5%; 
-        height: 7%;
-        background-color: #222;
-        border-radius: 5px;
-        
-        -webkit-box-shadow: 0 8px 6px -6px black;
-	    -moz-box-shadow: 0 8px 6px -6px black;
-	        box-shadow: 0 8px 6px -6px black;
-    }
-    
-    #MenuBar > div
-    {
-        width: 25%;
-        height: 100%;
-        
-        position: absolute;
-        border-left: 1px solid #c0c0c0;
-        
-    }
-    
-    #MenuBar > div > img
-    {
-        height: 70%;
-       
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10%;
-    }
-    
-    #MenuBar > div:first-child
-    {
-        border-left: none;
-    }
-    
-    #DrawingItem
-    {
-        left: 0%;
-    }
-    
-    #ColorItem
-    {
-        left: 25%;
-    }
-    
-    #CommentItem
-    {
-        left: 50%;
-    }
-    
-    #ControlItem
-    {
-        left: 75%;
-    }
-            
---></style>
 
 <script type = "text/jscript">
     $(document).ready(function () {
@@ -186,11 +60,7 @@
             hideWhiteboard();
         });
 
-        // simple jMenu plugin called
-        $("#jMenu").jMenu();
-
         
-
         updateUI();
         initMenuBar();
         initDrawing();
