--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -22,6 +22,7 @@
                     </div>
                 </div>
             </div>
+
             <div id = "PresBoardMainDisplay">
                 <img class = "MainSlideView" alt="" src="" />
             </div>
@@ -30,6 +31,10 @@
                 <div id = "canvasStack">
                     <img id = "imageLayer"/>
                 </div>
+            </div>
+
+            <div id="LaserPointerLayer">
+                <img id = "laserPointer" src="" />
             </div>
         </div>
 
