--- a/POIProxy/Views/Index.cshtml
+++ b/POIProxy/Views/Index.cshtml
@@ -11,9 +11,9 @@
 <script src = "@(Model.SignalrUrl)hubs" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery-ui-1.8.22.custom.min.js" type="text/javascript"></script>
 <script src = "@(Model.ScriptUrl)jquery.corner.js" type="text/javascript"></script>
-<script src = "@(Model.ScriptUrl)jquery.ui.touch-punch.min.js" type="text/javascript"></script>
 
 
+<!--Initialization routines-->
 <script type = "text/jscript">
     $(document).ready(function () {
         $.connection.hub.url = '@Model.SignalrUrl';
@@ -64,6 +64,7 @@
         updateUI();
         initMenuBar();
         initDrawing();
+        initLaserPointerLayer();
     });
 
     function updateUI() {
@@ -114,6 +115,25 @@
         });
     }
 
+    function initLaserPointerLayer() {
+        //Set the src for the laser pointer
+        $("#laserPointer").attr("src", "@(Model.ImageUrl)laser.png");
+    }
+
+    function updateLaserPointerPosition(point) {
+        var x = point.X / $("#canvasStack").width();
+        var y = point.Y / $("#canvasStack").height();
+
+        $("#laserPointer").css({
+            left: parseInt(x) + "%",
+            top:  parseInt(y) + "%"
+        });
+    }
+
+</script>
+
+<!--Handler functions -->
+<script type = "text/jscript">
     function initMenuBar() {
         $("#DrawingItem > img").attr("src", "@(Model.ImageUrl)pencil.png");
         $("#ColorItem > img").attr("src", "@(Model.ImageUrl)graph_bar.png");
@@ -125,6 +145,7 @@
         });
     }
 
+    
     function duringSlideOnSideBar(event, ui) {
         if (!isStart) {
             startValue = ui.value;
@@ -264,6 +285,7 @@
     }
 </script>
 
+<!--Comment tools-->
 <script type="text/javascript">
 
     function initDrawing() {
@@ -337,12 +359,34 @@
         }
 
         function loadComment(comment) {
-            for (var i = 0; i < comment.NumBeizerPath; i++) {
+
+            if (isPointerMode) {
+                if (comment.NumBeizerPath == 1) {
+                    updatePointer(comment.Paths[0]);
+                }
+                else {
+                    //Print out error
+                    console.log("Not valid pointer message: num path");
+                }
+            }
+            else for (var i = 0; i < comment.NumBeizerPath; i++) {
                 updateDrawing(comment.Paths[i]);
             }
 
             for (var i = 0; i < comment.NumText; i++) {
                 updateTextbox(comment.Texts[i]);
+            }
+        }
+
+        function updatePointer(path) {
+            if (path.Mode == 0) {
+                //Realtime mode, extract the position from the path
+                var x = path.Points[0].X;
+                var y = path.Points[0].Y;
+            }
+            else {
+                //Print out error
+                console.log("Not valid pointer message: mode");
             }
         }
 
@@ -473,6 +517,7 @@
                 ev.preventDefault();
                 break;
         }
+
         /*
         if (ev.layerX || ev.layerX == 0) { // Firefox
             ev._x = ev.layerX;
@@ -494,6 +539,11 @@
     }
 </script>
 
+<script type="text/javascript">
+    
+</script>
+
+<!--Textcomment class-->
 <script type="text/javascript">
     function POITextBox(textComment) {
         var isCollapsed;
@@ -607,6 +657,7 @@
     }
 </script>
 
+<!--Drawingcomment class-->
 <script type = "text/javascript">
     function POIDrawingCurve(myContext) {
         //Private variables
@@ -640,6 +691,9 @@
 
         //Function definitions
         function addPointToCurve(point) {
+            
+            //For testing purpose only
+            updateLaserPointerPosition(point);
 
             var newSegment;
 
@@ -761,7 +815,8 @@
 </script>
 
 <script type="text/javascript">
-    
+    //Global variables definitions
+
     // The pencil tool instance.
     var tool = new tool_pencil();
     
@@ -773,5 +828,8 @@
     //For showing presentation
     var curSlideIndex = 0;
     var preloadSlideIndex = 0;
+
+    //For switching between drawing and pointer mode
+    var isPointerMode = true;
 
 </script>
