--- a/POIProxy/Views/Layout.htm
+++ b/POIProxy/Views/Layout.htm
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div id="LaserPointerLayer">
+            <div id="laserPointerLayer">
                 <img id = "laserPointer" src="" />
             </div>
         </div>
